opa-kube-egress-demo/assets/demo.yaml
##################################################################################################
# Web service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  ports:
  - port: 80
    targetPort: 9080
    name: http
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - name: web
        image: openpolicyagent/demo-web-v1:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# OPA
##################################################################################################
kind: Service
apiVersion: v1
metadata:
  name: opa
  labels:
    app: opa
spec:
  selector:
    app: opa
  ports:
  - port: 8181
    targetPort: 8181
    name: http
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: opa
  name: opa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
      name: opa
    spec:
      containers:
       - args:
         - run
         - --server
         - "/policies/inject.rego"
         image: openpolicyagent/opa:0.10.1
         imagePullPolicy: IfNotPresent
         name: opa
         ports:
         - containerPort: 8181
         volumeMounts:
            - readOnly: true
              mountPath: /policies
              name: inject-policy
      volumes:
        - name: inject-policy
          configMap:
            name: inject-policy
---
##################################################################################################
# Ingress resource
##################################################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
---
